--- a/Navbar.css
+++ b/Navbar.css
@@ -1,61 +1,125 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.brand {
-  font-size:50px
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    min-width: 250px;
+    overflow-x: hidden;
 }
 
-.navbar-nav {
-  span.selector {
-    display:block;
-    height:30px;
-    margin-top:-15px;
-    padding:8px;
-    position:absolute;
-    right:15px;
-    top:15px;
-    width:30px;
-  }
-}
-
-
-@media (min-width:768px){
-  .navbar-nav {
-    span.selector {
-      display:none!important;
+@media screen and (min-width: 1500px) {
+    header{
+        padding-left: 15% !important;
+        padding-right: 15% !important;
     }
-	    .dropdown-menu {
-    position: absolute;
-    z-index: 1000;
+}
+
+
+@media screen and (min-width: 800px) {
+    header{
+        padding-left: 11%;
+        padding-right: 11%;
+    }
+}
+
+
+
+header{
+    height: 48px;
+    transition: height 2s, padding 2s;
+
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav .navlist{
+    float: right;
+}
+
+.navlist{
+    /*transform: translateX(47px);*/
+    transition: transform 5s;
+}
+
+.navlist a {
     float: left;
-    min-width: 160px;
-    margin: 2px 0 0;
-    list-style: none;
-    font-size: 14px;
-    text-align: left; 
-  }
-  .li {
-    position: relative;
     display: block;
-  }
-  
-  .subnav.dropdown-menu {    
-    .subnav.dropdown-menu {
-      background:none;
-      left:100%;
-      padding:0px;
-      top:0px;
-      width: 250px;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navlist a:hover:not(:first-child) {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #904A4E;
+    color: white;
+}
+
+.topnav a.icon {
+    position: absolute;
+    right: -47px;
+    transition: transform 3s;
+    top: 0px;
+}
+
+.logo{
+    height: 30px;
+    float: left;
+    padding: 9px;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.cursor0{
+    cursor: default;
+}
+
+.navlist a:not(.icon){
+    display: block;
+    transition: transform 2s, opacity 1s, visibility 1s;
+}
+
+
+
+@media screen and (max-width: 600px) {
+
+    .navlist a:not(.icon) {
+        transform: translateX(500px);
+        opacity: 0;
+        visibility: hidden;
     }
-  }
-  }
-  .navbar-nav li.dropdown:hover > ul.dropdown-menu {
-    display: block;
-  }
-  .open  .dropdown-menu,
-  .open  .dropdown-menu .open .dropdown-menu {
-      display: none;
-  }
-  .open:hover .dropdown-menu,
-  .open:hover .dropdown-menu .open:hover .dropdown-menu {
-      display: block;
-  }
+
+    .topnav a.icon {
+        visibility: visible;
+        float: right;
+        transform: translateX(-47px);
+    }
+
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+        position: absolute;
+        top: 0;
+        transform: translateX(-47px);
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+        transform: translateX(0px);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .topnav.responsive .navlist{
+        float: none;
+    }
 }
