--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1177,3 +1177,15 @@ section {
 	text-align: justify;
 }
 
+.introbox
+{
+	width:100%;
+	background-color:#F8F8F8;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.projectbox
+{
+	color:blue;
+	margin-top:-10px;
+}
