--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("assets/img/Personal/hero.JPG") top right no-repeat;
+  background: url("assets/img/Personal/hero.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
