--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1234,4 +1234,13 @@ section {
       rgba(255,250,150,0.8)
     );
 }
+
+
+.avatar2
+{
+	width:auto;
+	height:200px;
+	vertical-align:middle;
+	margin-left:100px;
+}
     
