--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1208,6 +1208,9 @@ section {
 .prototype-introduction
 {
 	padding-bottom:20px;
+	 font-family:'SF Pro Display';
+  font-style:normal;
+  font-weight:400;
 }
 
 .titlebox
@@ -1232,6 +1235,7 @@ section {
       rgba(255,250,150,0.8) 100%, 
       rgba(255,250,150,0.8)
     );
+	color:blue;
 }
 
 
@@ -1253,3 +1257,42 @@ section {
 	color:#ffffff;
 }
 
+.horizontalline {
+	display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #bf94e4;
+  margin: 30px auto 0;
+}
+
+.horizontalline1 {
+	display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #bf94e4;
+  margin-bottom:20px;
+}
+
+.avatar3
+{
+	padding-top:10px;
+	width:300px;
+	height:300px;
+	overflow:hidden;
+}
+
+.researchtext
+{
+	display: flex;
+  align-items: center;
+	font-size:20px;
+	margin-top:100px;
+}
+
+.avatar4
+{	text-align:center;
+width:100%;
+display:block;
+margin:auto;
+	
+}
