--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1179,7 +1179,7 @@ section {
 .introbox
 {
 	width:100%;
-	background-color:#fff0ff;
+	background-color:#f3f3f3;
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 4px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -1291,8 +1291,85 @@ section {
 
 .avatar4
 {	text-align:center;
-width:100%;
+width:50%;
 display:block;
 margin:auto;
+}
+
+.countermargin
+{
+	margin-top:30px;
+}
+
+blockquote {
+	font-size: 1rem;
+	max-width: 600px;
+	line-height: 1.4;
+	position: relative;
+	margin: 0;
+	padding: .5rem;
+	color:#72A0C1;
+	font-weight:200px;
+	font-family: Lobster, cursive !important;
 	
+}
+
+
+
+blockquote:before {
+	content: '“';
+	left: -5rem;
+	top: -2rem;
+}
+
+blockquote:after {
+	content: '”';
+	right: -5rem;
+	bottom: 1rem;
+}
+
+.avatar5
+{	
+width:auto;
+height:200px;
+text-align:center;
+display:flex;
+}
+
+.researchtext2
+{
+	display: flex;
+  align-items: center;
+	font-size:20px;
+	margin-top:80px;
+}
+
+.uppermargin
+{
+	padding-top:50px;
+}
+
+.researchtext1
+{
+	display: flex;
+	font-size:20px;
+	margin-top:30px;
+}
+
+#process
+{
+	background-color:#7289da;
+}
+
+.headingtitle
+{
+	color:#fff;
+}
+
+.avatar6
+{	
+width:30%;
+align-content:center;
+display:flex;
+margin:auto;
 }
