--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1330,7 +1330,7 @@ blockquote:after {
 
 .avatar5
 {	
-width:auto;
+width:100%;
 height:200px;
 text-align:center;
 display:flex;
@@ -1353,7 +1353,7 @@ display:flex;
 {
 	display: flex;
 	font-size:20px;
-	margin-top:30px;
+	margin-top:40px;
 }
 
 #process
