--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1289,6 +1289,7 @@ section {
 	margin-top:100px;
 }
 
+
 .avatar4
 {	text-align:center;
 width:50%;
@@ -1416,4 +1417,42 @@ margin:auto;
       rgba(21,166,219)
     );
 	color:white;
+}
+
+.horizontalline3
+{
+	display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #FFD700;
+  margin-bottom:20px;
+}
+
+.horizontalline4 {
+	display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #FFD700;
+  margin: 30px auto 0;
+}
+
+.coeit-introduction
+{
+	padding-top:20px;
+	 font-family:'SF Pro Display';
+  font-style:normal;
+  font-weight:400;
+}
+
+.iuconcerns
+{
+	border-radius: 1em 0 1em 0;
+text-shadow: 1px 1px 1px #fff;
+  background-image: 
+    linear-gradient(-100deg, 
+      rgba(0,0,0,0.8),
+      rgba(0,0,0,0.8) 100%, 
+      rgba(0,0,0,0.8)
+    );
+	color:#FFD700;;
 }
