--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1461,3 +1461,15 @@ text-shadow: 1px 1px 1px #fff;
 {
 		color:#8DB6CD;
 }
+
+#process2
+{
+	background-color:#000;
+}
+
+.avatar9
+{	text-align:center;
+width:60%;
+display:block;
+margin:auto;
+}
