--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1477,22 +1477,35 @@ margin:auto;
 #insights2
 {
 	background-color:#8DB6CD;
+	width:100%;
+	overflow:hidden;
 }
 
 #painpoints
 {
 	background-color:black;
+	width:100%;
+	overflow:hidden;
 }
 
 .listitems
 {
-	margin-left:20px;
 	padding-bottom:40px;
+	font-size:16px;
+	padding-right:20px;
+	margin-left:40px;
 }
 
 .headingtitle2
 {
 	color:#fff;
-	margin-left:20px;
+	margin-left:40px;
 	padding-top:40px;
+}
+
+.introtext3
+{
+	vertical-align:middle;
+	font-size:14px;
+	margin-top:20px;
 }
