--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("assets/img/Personal/hero image.png") top right no-repeat;
+  background: url("/assets/img/Personal/hero.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -284,7 +284,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero p span {
-  color: #0563bb;
+  color: #f9148a;
   letter-spacing: 1px;
 }
 
@@ -1053,6 +1053,8 @@ section {
 --------------------------------------------------------------*/
 .portfolio-details {
   padding: 40px 0;
+  height:100%;
+  background-color:#aeaeae;
 }
 
 .portfolio-details .portfolio-title {
@@ -1181,6 +1183,8 @@ section {
 	width:100%;
 	background-color:#f3f3f3;
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 4px 0 rgba(0, 0, 0, 0.19);
+	height:100%;
+	padding-bottom:20px;
 }
 
 .projectbox
@@ -1508,3 +1512,30 @@ margin:auto;
 	font-size:14px;
 	margin-top:20px;
 }
+
+.horizontalline4 {
+	display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #35586C;
+  margin: 30px auto 0;
+}
+
+.horizontalline5 {
+	display:block;
+  width: 100%;
+  height: 5px;
+  background-color: #35586C;
+  margin-bottom:20px;
+}
+
+#process3
+{
+	background-color:#d3d3d3;
+}
+
+.headingtitle4
+{
+	color:#000;
+}
+
