--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1051,6 +1051,13 @@ section {
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
+.mygradient{
+	background: #000000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 .portfolio-details {
   padding: 40px 0;
   height:100%;
@@ -1109,6 +1116,7 @@ section {
 @media (max-width: 992px) {
   .portfolio-details .portfolio-info {
     padding-top: 20px;
+	width:100%;
   }
 }
 
@@ -1219,14 +1227,16 @@ section {
 
 .titlebox
 {
-	height:500px;
+	height:auto;
 	width:auto;
 }
 
 .portfolio-title1
 {
-	padding-top:150px;
+	display:flex;
+	margin:auto;
 	vertical-align:middle;
+	color:#fff;
 }
 
 .irqhighlight
