--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1274,7 +1274,8 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
 {
 	font-family: 'Roboto';
 	padding-left:20px;
-	color:#fff;
+	color:#000;
+	font-weight: bold;
 }
 
 .horizontalline {
@@ -1448,11 +1449,12 @@ margin:auto;
   margin-bottom:20px;
 }
 
-.horizontalline4 {
+.horizontalline2 
+{
 	display:block;
   width: 100%;
   height: 5px;
-  background-color: #FFD700;
+  background-color:#FFD700;
   margin: 30px auto 0;
 }
 
