--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1566,3 +1566,20 @@ width:50px;
 height:auto;
 margin-left:60px;
 }
+
+.avatar10
+{
+		width:60%;
+		margin:auto;
+		display:flex;
+}
+
+.avatar11
+{
+	width:90%;
+	align-content:center;
+	display:flex;
+	margin:auto;
+	padding-bottom:20px;
+	margin-top:-10px;
+}
