--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1583,3 +1583,7 @@ margin-left:60px;
 	padding-bottom:20px;
 	margin-top:-10px;
 }
+
+.zoom:hover {
+  transform: scale(1.2);  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
