--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,51 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
 }
 
+#hero-page {
+  width: 100%;
+  height: 100vh;
+  background: url("/assets/img/Personal/Prototype.jpg") top right no-repeat; 
+  background-size: cover;
+  position: relative;
+  background-color:#fff381;
+}
+
+@media (min-width: 992px) {
+  #hero-page {
+    padding-left: 160px;
+  }
+}
+
+#hero-page:before {
+  content: "";
+  background: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#hero-page h1 {
+  margin: 0;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #45505b;
+}
+
+#hero-page p {
+  color: #45505b;
+  margin: 15px 0 0 0;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
+}
+
+#hero-page p span {
+  color: #f9148a;
+  letter-spacing: 1px;
+}
+
 .social-links {
   margin-top: 20px;
   text-align:center;
@@ -1584,6 +1629,27 @@ margin-left:60px;
 	margin-top:-10px;
 }
 
+.avatar12
+{
+	width:100%;
+	z-index:-5;
+	height:auto;
+	opacity:0.6;
+	position:relative;
+}
 .zoom:hover {
   transform: scale(1.2);  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
+.text-aria
+{
+	font-size:20px;
+}
+
+.header-aria
+{
+	font-weight: 700;
+  font-size: 26px;
+  color: #728394;
+}
+
