--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,55 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
 }
 
+#hero-page2 {
+  width: 100%;
+  height: 100vh;
+  background: url("/assets/img/Personal/Prototype.jpg") top right no-repeat; 
+  background-size: cover;
+  position: relative;
+  display;block;
+  margin-top:-100px;
+  background-color:#fff381;
+  z-index: -1;
+}
+
+@media (min-width: 992px) {
+  #hero-page2 {
+    padding-left: 160px;
+  }
+}
+
+#hero-page2:before {
+  content: "";
+  background: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#hero-page2 h1 {
+  margin: 0;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #45505b;
+}
+
+#hero-page2 p {
+  color: #45505b;
+  margin: 15px 0 0 0;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
+}
+
+#hero-page2 p span {
+  color: #f9148a;
+  letter-spacing: 1px;
+}
+
+
 .social-links {
   margin-top: 20px;
   text-align:center;
@@ -1420,6 +1469,10 @@ display:flex;
 	margin-top:50px;
 }
 
+.uppermargin2
+{
+	margin-top:30px;
+}
 .researchtext1
 {
 	display: flex;
@@ -1542,7 +1595,7 @@ text-shadow: 1px 1px 1px #fff;
 
 .userbasecolor
 {
-		color:#8DB6CD;
+		color:#e0218a;
 }
 
 #process2
@@ -1560,6 +1613,13 @@ margin:auto;
 #insights2
 {
 	background-color:#8DB6CD;
+	width:100%;
+	overflow:hidden;
+}
+
+#insights3
+{
+	background-color:whitesmoke;
 	width:100%;
 	overflow:hidden;
 }
