--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,7 +340,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero-page2 {
   width: 100%;
   height: 100vh;
-  background: url("/assets/img/Personal/Prototype.jpg") top right no-repeat; 
+  background: url("/assets/img/Personal/B-AID.png") top right no-repeat; 
   background-size: cover;
   position: relative;
   display;block;
