--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,7 +553,7 @@ section {
   width: 100%;
   position: relative;
   text-align: center;
-  background: #fff;
+  background: inherit;
 }
 
 .facts .count-box i {
@@ -579,7 +579,7 @@ section {
   padding: 0;
   margin: 0;
   font-family: "Raleway", sans-serif;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 /*--------------------------------------------------------------
@@ -601,6 +601,10 @@ section {
   color: #45505b;
 }
 
+.hr
+{
+	border-size:20px;
+}
 .skills .progress .skill .val {
   float: right;
   font-style: normal;
