--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1846,6 +1846,12 @@ margin-left:60px;
 	letter-spacing:1px;
 }
 
+.icon-box h4 a
+{
+  color:#1874CD	 !important;	
+}
+
+
 .hover:hover 
 {
    text-decoration: underline;
