--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,7 +436,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero-page4 {
   width: 100%;
   height: 100vh;
-  background: url("/assets/img/Personal/Homepage.png") top right no-repeat; 
+  background: url("/assets/img/Personal/.png") top right no-repeat; 
   background-size: cover;
   position: relative;
   display;block;
