--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1865,3 +1865,36 @@ margin-left:60px;
 {
 	margin-right:30px;
 }
+
+.center
+{
+	align-items:center;
+	
+}
+.custom-btn {
+  width: 200px;
+  height: 60px;
+  color: #fff !important;
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  margin:0;
+  outline: none;
+  margin-top:50px;
+}
+
+/* 1 */
+.btn-1 {
+  background: #fff; /* rgb(6,14,131); */
+  border: none;
+}
+.btn-1:hover {
+   background: #a0a0a0 /* rgb(0,3,255); */
+}
