--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero-page {
   width: 100%;
   height: 30vh;
-  /* background: url("/assets/img/Personal/Prototype.jpg") top right no-repeat; */ 
+  /* background: url("/assets/img/Personal/Prototype.jpg") top right no-repeat; */
   background-size: cover;
   position: relative;
   display;block;
@@ -451,7 +451,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
 }
 
- 
+
 #about-page {
   width: 100%;
   height: 30vh;
@@ -1420,7 +1420,7 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
 }
 
 .introtext
-{	
+{
 	vertical-align:middle;
 	font-size:18px;
 	margin-top:20px;
@@ -1452,10 +1452,10 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
 {
   border-radius: 1em 0 1em 0;
   text-shadow: 1px 1px 1px #fff;
-  background-image: 
-    linear-gradient(-100deg, 
+  background-image:
+    linear-gradient(-100deg,
       rgba(255,250,150,0.8),
-      rgba(255,250,150,0.8) 100%, 
+      rgba(255,250,150,0.8) 100%,
       rgba(255,250,150,0.8)
     );
 	color:blue;
@@ -1534,7 +1534,7 @@ blockquote {
 	color:#65000b ;
 	font-weight:200px;
 	font-family: Lobster, cursive !important;
-	
+
 }
 
 
@@ -1552,7 +1552,7 @@ blockquote:after {
 }
 
 .avatar5
-{	
+{
 width:100%;
 height:200px;
 text-align:center;
@@ -1575,7 +1575,7 @@ display:flex;
 
 .uppermargin2
 {
-	margin-top:30px;
+  padding-bottom:30px;
 }
 .researchtext1
 {
@@ -1595,7 +1595,7 @@ display:flex;
 }
 
 .avatar6
-{	
+{
 width:30%;
 align-content:center;
 display:flex;
@@ -1647,12 +1647,12 @@ margin:auto;
 
 .irqhighlight2
 {
-	 
+
   text-shadow: 1px 1px 1px #fff;
-  background-image: 
-    linear-gradient(-100deg, 
+  background-image:
+    linear-gradient(-100deg,
       rgba(21,166,219),
-      rgba(21,166,219) 100%, 
+      rgba(21,166,219) 100%,
       rgba(21,166,219)
     );
 	color:white;
@@ -1671,10 +1671,10 @@ margin:auto;
 {
 	border-radius: 1em 0 1em 0;
 text-shadow: 1px 1px 1px #fff;
-  background-image: 
-    linear-gradient(-100deg, 
+  background-image:
+    linear-gradient(-100deg,
       rgba(0,0,0,0.8),
-      rgba(0,0,0,0.8) 100%, 
+      rgba(0,0,0,0.8) 100%,
       rgba(0,0,0,0.8)
     );
 	color:#FFD700;;
@@ -1827,11 +1827,11 @@ margin-left:60px;
 
 .icon-box h4 a
 {
-  color:#1874CD	 !important;	
+  color:#1874CD	 !important;
 }
 
 
-.hover:hover 
+.hover:hover
 {
    text-decoration: underline;
 }
@@ -1844,7 +1844,7 @@ margin-left:60px;
 .center
 {
 	text-align:center;
-	
+
 }
 .custom-btn {
   width: 200px;
@@ -1872,4 +1872,42 @@ margin-left:60px;
    background: #a0a0a0 /* rgb(0,3,255); */
 }
 
+.background
+{
+  background-color: #3C6478;
+  padding-bottom: 30px;
+  padding-top:30px;
+}
 
+.textbackground
+{
+  color: #fff;
+}
+
+.textbackground2
+{
+  color: #EBC944;
+}
+
+.headerbackground
+{
+  color: #EBC944;
+}
+
+.bottompadding
+{
+  padding-bottom:30px;
+}
+
+.background2
+{
+  background-color: #F5E8DA;
+  padding-top:30px;
+  padding-bottom:30px;
+}
+
+.recommendations
+{
+  margin-top:-40px;
+  border: 8px solid #a0a0a0;
+}
