--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,8 +283,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero-page {
   width: 100%;
-  height: 30vh;
-  /* background: url("/assets/img/Personal/Prototype.jpg") top right no-repeat; */
+  height: 50vh;
+  background: url("/assets/img/Personal/Prototype_main.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
   display;block;
@@ -308,7 +308,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 40px;
   font-weight: 700;
   line-height: 56px;
-  color: #f8f8be;
+  color: #000;
   text-align:center !important;
 }
 
@@ -1699,7 +1699,7 @@ margin:auto;
 
 #insights2
 {
-	background-color:#8DB6CD;
+	background-color:#234e70;
 	width:100%;
 	overflow:hidden;
 }
@@ -1881,12 +1881,12 @@ margin-left:60px;
 
 .textbackground
 {
-  color: #fff;
+  color: #ce2029;
 }
 
 .textbackground2
 {
-  color: #EBC944;
+  color: #66023C;
 }
 
 .headerbackground
@@ -1910,4 +1910,93 @@ margin-left:60px;
 {
   margin-top:-40px;
   border: 8px solid #a0a0a0;
+}
+
+.triangle {
+  height: 300px;
+  width: 300px;
+  background-color: #add8e6 /*FFDE00 */;
+  border-radius: 80px;
+  margin-bottom: 30px;
+  float: right;
+  margin-right: 20px;
+  margin-left:-40px;
+  z-index:-1000;
+  position:absolute;
+  opacity:0.2;
+}
+
+.triangle2 {
+  height: 300px;
+  width: 300px;
+  background-color: #add8e6 /*FFDE00 */;
+  border-radius: 80px;
+  margin-top:-150px;
+  float: right;
+  margin-right: 20px;
+  margin-left:60px;
+  z-index:-1000;
+  position:absolute;
+  opacity:0.3;
+}
+
+.triangle3 {
+  height: 300px;
+  width: 300px;
+  background-color: #add8e6 /*FFDE00 */;
+  border-radius: 80px;
+  margin-bottom: 30px;
+  float: right;
+  margin-right: -20px;
+  margin-left:-40px;
+  z-index:-1000;
+  position:absolute;
+  opacity:0.2;
+}
+
+.triangle4 {
+  height: 300px;
+  width: 300px;
+  background-color: #add8e6 /*FFDE00 */;
+  border-radius: 80px;
+  margin-top:-150px;
+  float: right;
+  margin-right: -60px;
+  margin-left:60px;
+  z-index:-1000;
+  position:absolute;
+  opacity:0.3;
+}
+
+
+.shape2 {
+  border-radius: 30px;
+}
+
+.portfolio-background
+{
+  background-color: #B92E34;
+  color:#fff;
+  margin:0;
+}
+
+.portfolio-padding
+{
+  padding-bottom:60px;
+}
+
+.expander{
+   position: absolute;
+   top: 200px;
+   width: 100%;
+}
+
+.expander span
+{
+  color: white;
+   font: bold 24px/45px Helvetica, Sans-Serif;
+   letter-spacing: -1px;
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px;
 }
