--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,7 +285,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 50vh;
   background: url("/assets/img/Personal/Prototype_main.jpeg") top right no-repeat;
-  background-size: cover;
+  background-size: contain;
   position: relative;
   display;block;
   background-color:#234e70;
