--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,11 +241,11 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 60vh;
   /*background: url("/assets/img/Personal/hero.png") top right no-repeat; */
   background-size: cover;
   position: relative;
-  background-color:#234e70;
+  background-color:whitesmoke;
 }
 
 
@@ -263,21 +263,27 @@ h1, h2, h3, h4, h5, h6 {
   font-size:60px;
   font-weight: 700;
   line-height: 56px;
-  color: #f8f8be;
-  margin-bottom:5px;
-  text-align:center !important;
+  color: #000;
+  margin-bottom:15px;
+}
+
+#hero h2 {
+  font-size:48px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #000;
+  margin-bottom:15px;
 }
 
 #hero p {
-  color: #f8f8be;
+  color: #000;
   margin: 30px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
-  text-align:center !important;
 }
 
 #hero p span {
-  color: #f8f8be;
+  color: #000;
   letter-spacing: 1px;
 }
 
@@ -1946,11 +1952,11 @@ margin-left:60px;
   background-color: #add8e6 /*FFDE00 */;
   border-radius: 80px;
   margin-bottom: 30px;
-  float: right;
-  margin-right: -20px;
+  float: left;
+  margin-right: 50px;
   margin-left:-40px;
   z-index:-1000;
-  position:absolute;
+  position:relative;
   opacity:0.2;
 }
 
@@ -1968,7 +1974,47 @@ margin-left:60px;
   opacity:0.3;
 }
 
+.triangle7 {
+  height: 200px;
+  width: 200px;
+  background-color: #6E20CE /*FFDE00 */;
+  border-radius: 80px;
+  margin-bottom: 15px;
+  float: right;
+  margin-right: 100px;
+  margin-left:-40px;
+  z-index:-1001;
+  position:absolute;
+  opacity:0.1;
+}
 
+.triangle6 {
+  height: 200px;
+  width: 200px;
+  background-color: #6E20CE /*FFDE00 */;
+  border-radius: 80px;
+  margin-bottom: 15px;
+  float: right;
+  margin-right: 20px;
+  margin-left:-40px;
+  z-index:-1001;
+  position:absolute;
+  opacity:0.1;
+}
+
+.triangle5 {
+  height: 200px;
+  width: 200px;
+  background-color: #6E20CE  /*FFDE00 */;
+  border-radius: 80px;
+  margin-top:-150px;
+  float: right;
+  margin-right: 20px;
+  margin-left:60px;
+  z-index:-1000;
+  position:absolute;
+  opacity:0.15;
+}
 .shape2 {
   border-radius: 30px;
 }
