--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   position: relative;
   background-color:whitesmoke;
+  display:block;
 }
 
 
@@ -260,6 +261,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 {
+
+  margin: 0;
   font-size:60px;
   font-weight: 700;
   line-height: 56px;
@@ -1956,7 +1959,7 @@ margin-left:60px;
   margin-right: 50px;
   margin-left:-40px;
   z-index:-1000;
-  position:relative;
+  position:absolute;
   opacity:0.2;
 }
 
