--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,12 +241,13 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 60vh;
+  height: auto;
   /*background: url("/assets/img/Personal/hero.png") top right no-repeat; */
   background-size: cover;
   position: relative;
   background-color:whitesmoke;
   display:block;
+  padding-bottom:100px;
 }
 
 
@@ -1979,8 +1980,7 @@ margin-left:60px;
 
 .triangle7 {
   height: 200px;
-  width: 200px;
-  background-color: #6E20CE /*FFDE00 */;
+  width: 200px;/*FFDE00 */;
   border-radius: 80px;
   margin-bottom: 15px;
   float: right;
@@ -1989,12 +1989,15 @@ margin-left:60px;
   z-index:-1001;
   position:absolute;
   opacity:0.1;
+  border-width:5px;
+  border-style:dashed;
+  border-color: #6E20CE;
 }
 
 .triangle6 {
   height: 200px;
   width: 200px;
-  background-color: #6E20CE /*FFDE00 */;
+  background-color: #6E20CE /* FFDE00 */;
   border-radius: 80px;
   margin-bottom: 15px;
   float: right;
@@ -2008,7 +2011,7 @@ margin-left:60px;
 .triangle5 {
   height: 200px;
   width: 200px;
-  background-color: #6E20CE  /*FFDE00 */;
+  /* background-color: #6E20CE  FFDE00 */;
   border-radius: 80px;
   margin-top:-150px;
   float: right;
@@ -2017,6 +2020,9 @@ margin-left:60px;
   z-index:-1000;
   position:absolute;
   opacity:0.15;
+  border-width:5px;
+  border-style:dashed;
+  border-color: #6E20CE;
 }
 .shape2 {
   border-radius: 30px;
