--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,7 +379,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero-page3 {
   width: 100%;
   height: 50vh;
-  background: url("/assets/img/Personal/COEIT 1.png") top right no-repeat;
+  background: url("/assets/img/Personal/COEIT1.png") top right no-repeat;
   background-size: cover;
   position: relative;
   display:block;
