--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,12 +380,11 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: auto;
   background: url("/assets/img/Personal/COEIT1.png") top right no-repeat;
-  background-size: contain;
+  background-size: auto;
   position: relative;
   display:block;
   background-color:#234e70;
   z-index: -1;
-  opacity:0.5;
 }
 
 
