--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,7 +379,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero-page3 {
   width: 100%;
   height: 50vh;
-  background: url("/assets/img/Personal/COEIT1.png") center no-repeat;
+  background: url("/assets/img/Personal/COEIT1.png") top center no-repeat;
   background-size: auto;
   position: relative;
   display:block;
@@ -396,6 +396,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   right: 0;
+  opacity:0.5;
 }
 
 #hero-page3 h1 {
