--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero-page {
   width: 100%;
   height: 50vh;
-  background: url("/assets/img/Personal/Prototype_main.jpeg") no-repeat;
+  /* background: url("/assets/img/Personal/Prototype_main.jpeg") no-repeat; */
   background-size: cover;
   position: relative;
   display;block;
