--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #272829;
 }
 
@@ -22,8 +22,13 @@ a:hover {
   text-decoration: none;
 }
 
+p{
+
+    font-family: "Helvetica", sans-serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -293,13 +298,14 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero-page {
   width: 100%;
-  height: 50vh;
-  /* background: url("/assets/img/Personal/Prototype_main.jpeg") no-repeat; */
+  height: 100vh;
+  background: url("/assets/img/Personal/Prototype_main.jpeg") no-repeat;
   background-size: cover;
   position: relative;
   display;block;
   background-color:#000;
   z-index: -1;
+  opacity:0.8;
 }
 
 
@@ -464,7 +470,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #about-page {
   width: 100%;
-  height: 30vh;
+  height: 20vh;
   background-size: cover;
   position: relative;
   display;block;
@@ -1861,11 +1867,11 @@ margin-left:60px;
 /* 1 */
 .btn-1 {
   background: transparent; /* rgb(6,14,131); */
-  border: 2px solid #6E20CE;
+  border: 2px solid #4B9CD3;
 }
 .btn-1:hover {
-   background: #6E20CE; /* rgb(0,3,255); */
-   color: #FFD700 !important;
+   background: #4B9CD3; /* rgb(0,3,255); */
+   color: #fff !important;
 }
 
 .background
@@ -1917,7 +1923,7 @@ margin-left:60px;
 .triangle {
   height: 300px;
   width: 300px;
-  background-color: #add8e6 /*FFDE00 */;
+  background-color: #4B9CD3 /*FFDE00 */;
   border-radius: 80px;
   margin-bottom: 30px;
   float: right;
@@ -1931,7 +1937,7 @@ margin-left:60px;
 .triangle2 {
   height: 300px;
   width: 300px;
-  background-color: #add8e6 /*FFDE00 */;
+  background-color: #4B9CD3 /*FFDE00 */;
   border-radius: 80px;
   margin-top:-150px;
   float: right;
@@ -1945,7 +1951,7 @@ margin-left:60px;
 .triangle3 {
   height: 300px;
   width: 300px;
-  background-color: #add8e6 /*FFDE00 */;
+  background-color: #4B9CD3 /*FFDE00 */;
   border-radius: 80px;
   margin-bottom: 30px;
   float: left;
@@ -1959,7 +1965,7 @@ margin-left:60px;
 .triangle4 {
   height: 300px;
   width: 300px;
-  background-color: #add8e6 /*FFDE00 */;
+  background-color: #4B9CD3 /*FFDE00 */;
   border-radius: 80px;
   margin-top:-150px;
   float: right;
@@ -1983,13 +1989,13 @@ margin-left:60px;
   opacity:0.1;
   border-width:5px;
   border-style:dashed;
-  border-color: #6E20CE;
+  border-color: #4B9CD3;
 }
 
 .triangle6 {
   height: 200px;
   width: 200px;
-  background-color: #6E20CE /* FFDE00 */;
+  background-color: #4B9CD3 /* FFDE00 */;
   border-radius: 80px;
   margin-bottom: 15px;
   float: right;
@@ -2014,7 +2020,7 @@ margin-left:60px;
   opacity:0.15;
   border-width:5px;
   border-style:dashed;
-  border-color: #6E20CE;
+  border-color: #4B9CD3;
 }
 .shape2 {
   border-radius: 30px;
@@ -2059,10 +2065,10 @@ margin-left:60px;
   margin-left:-40px;
   z-index:-1001;
   position:absolute;
-  opacity:0.9;
+  opacity:0.5;
   border-width:5px;
   border-style:dashed;
-  border-color: #6E20CE;
+  border-color: #4B9CD3 /*#6E20CE;*/;
 }
 
 .rectangle2 {
@@ -2076,7 +2082,7 @@ margin-left:60px;
   margin-left:-40px;
   z-index:-1001;
   position:absolute;
-  opacity:0.8;
+  opacity:0.6;
 }
 
 .rectangle3 {
@@ -2090,10 +2096,10 @@ margin-left:60px;
   margin-left:60px;
   z-index:-1000;
   position:absolute;
-  opacity:0.85;
+  opacity:0.55;
   border-width:5px;
   border-style:dashed;
-  border-color: #6E20CE;
+  border-color: #4B9CD3 /*#6E20CE;*/;
 }
 
 .rectangle4 {
@@ -2107,7 +2113,7 @@ margin-left:60px;
   opacity:0.9;
   border-width:5px;
   border-style:dashed;
-  border-color: #6E20CE;
+  border-color:#4B9CD3 /*#6E20CE;*/;
 }
 
 
@@ -2126,7 +2132,7 @@ margin-left:60px;
   opacity:0.85;
   border-width:5px;
   border-style:dashed;
-  border-color: #6E20CE;
+  border-color:#4B9CD3 /*#6E20CE;*/;
 }
 
 .project-title
@@ -2138,4 +2144,15 @@ margin-left:60px;
 .navbar-toggler
 {
   background-color:#fff !important;
+}
+
+.introduction
+{
+  background-color:#AFDBF5 /*#ffffe4*/ !important;
+  margin-top:-40px;
+}
+
+mark{
+ background-color:#082567 !important;
+ color:#fff;
 }
